force-app/main/default/objects/numm__DetailFacturation__c/numm__DetailFacturation__c.object-meta.xml
<CustomObject>
    <label>Detail Facturation</label>
    <nameField>
        <displayFormat>DF-{0000}</displayFormat>
        <label>Detail Facturation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Details Facturation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>