force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__AffCouponOnPDF__c.field-meta.xml
<CustomField>
    <fullName>numm__AffCouponOnPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Affichage du coupon de règlement sur la facture</inlineHelpText>
    <label>Afficher le coupon de règlement</label>
    <type>Checkbox</type>
</CustomField>