force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__AffEntitePiedPage__c.field-meta.xml
<CustomField>
    <fullName>numm__AffEntitePiedPage__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Affichage de l&#39;entité en pied de page</inlineHelpText>
    <label>Adresse de l&#39;entité en pied de page</label>
    <type>Checkbox</type>
</CustomField>