force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Details Facturation</relationshipLabel>
    <relationshipName>Details_Facturation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>