force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__HasPdfcustom__c.field-meta.xml
<CustomField>
    <fullName>numm__HasPdfcustom__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dans le cas d&#39;une page personnalisée, générer dans le cas  d&#39;une facture standard, le pdf personnalisé sera pri en compte.</inlineHelpText>
    <label>PDF Personnalisé</label>
    <type>Checkbox</type>
</CustomField>