force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__HideEntiteHeader__c.field-meta.xml
<CustomField>
    <fullName>numm__HideEntiteHeader__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Masque le nom et l&#39;adresse de l&#39;entité en entete de facture</inlineHelpText>
    <label>Masquer l&#39;entité d&#39;entête</label>
    <type>Checkbox</type>
</CustomField>