force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__HideUnit__c.field-meta.xml
<CustomField>
    <fullName>numm__HideUnit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Masquer l&#39;unité</label>
    <type>Checkbox</type>
</CustomField>