force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__IsPU2dec__c.field-meta.xml
<CustomField>
    <fullName>numm__IsPU2dec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P.U sur 2 décimales</label>
    <type>Checkbox</type>
</CustomField>