force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Ligne2__c.field-meta.xml
<CustomField>
    <fullName>numm__Ligne2__c</fullName>
    <label>Information Complémentaire 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>