force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Ligne2_Style__c.field-meta.xml
<CustomField>
    <fullName>numm__Ligne2_Style__c</fullName>
    <label>Information Complémentaire 2 Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Gras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>