force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Ligne3_2__c.field-meta.xml
<CustomField>
    <fullName>numm__Ligne3_2__c</fullName>
    <label>Information Complémentaire 4</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>