force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Ligne3__c.field-meta.xml
<CustomField>
    <fullName>numm__Ligne3__c</fullName>
    <label>Information Complémentaire 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>