force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Ligne4_TextAlign__c.field-meta.xml
<CustomField>
    <fullName>numm__Ligne4_TextAlign__c</fullName>
    <label>Alignement Information Complémentaire 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Droite</fullName>
                <default>true</default>
                <label>Droite</label>
            </value>
            <value>
                <fullName>Gauche</fullName>
            </value>
            <value>
                <fullName>Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>