force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__LignePied__c.field-meta.xml
<CustomField>
    <fullName>numm__LignePied__c</fullName>
    <inlineHelpText>Ligne ajoutée au pied de page</inlineHelpText>
    <label>Information Complémentaire  pied de page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>