force-app/main/default/objects/numm__DetailFacturation__c/fields/numm__Not_affichEntiteOnPdf__c.field-meta.xml
<CustomField>
    <fullName>numm__Not_affichEntiteOnPdf__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si le nom de l&#39;entité est inclus dans le logo, cocher pour ne pas afficher de nouveau le nom de l&#39;entité dans l&#39;adresse de l&#39;entité</inlineHelpText>
    <label>Ne pas afficher le nom de l&#39;entité</label>
    <type>Checkbox</type>
</CustomField>